@@ -108,17 +108,12 @@ maintainability of the Eclipse-RPM core (represented by the
 org.eclipse.cdt.rpm.core plug-in).  Most items in the Eclipse-RPM 3.0 plan are
 dependent on the core refactor.</p>
 
-<p>Proposed items:</p>
-
-<ul>
-<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82196">82196</a>: Move propertypage plug-in to org.eclipse.cdt.rpm.ui (P3)</li>
-</ul>
-
 <p>Completed items:</p>
 
 <ul>
-<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82195">82195</a>: Refactor org.eclipse.cdt.rpm.core (P1)</li>
-<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82197">82197</a>: Add RPM project nature (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82195"><strike>82195</strike></a>: Refactor org.eclipse.cdt.rpm.core (P1)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82197"><strike>82197</strike></a>: Add RPM project nature (P3)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82196"><strike>82196</strike></a>: Move propertypage plug-in to org.eclipse.cdt.rpm.ui (P3)</li>
 </ul>
 
 <p></p>
@@ -171,7 +166,7 @@ dependent on the core refactor.</p>
 <p>Completed items:</p>
 
 <ul>
-<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82176">82176</a>: Implement unit tests (P2)</li>
+<li><a href="https://bugs.eclipse.org/bugs/show_bug.cgi?id=82176"><strike>82176</strike></a>: Implement unit tests (P2)</li>
 </ul>
 
 <p></p>
