@@ -1,3 +1,8 @@
+2005-05-19  Jeremy Handcock  <handcock@redhat.com>
+
+	* .project: New.
+	* planning/eclipse-rpm-3_0.html: Update completed items.
+
 2005-05-18  Jeremy Handcock  <handcock@redhat.com>
 
 	* planning/eclipse-rpm-3_0.html: Update completed items.
